--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-SECRET_KEY = ''
-DATABASE_NAME=db_name
-DATABASE_USER=db_user 
-DATABASE_PASSWORD=password
-DATABASE_HOST=localhost
+SECRET_KEY = 'w!r@suk+5zvskrug*uzlkg_==+mp2l(^8v2)an@tn$h3q^vr#p'
+DATABASE_NAME='foodcompanion'
+DATABASE_USER='root'
+DATABASE_PASSWORD=f00dc0mp4n10n
+DATABASE_HOST=foodcompanion.cxogbrmjqskx.us-east-2.rds.amazonaws.com
 DATABASE_PORT=5432
