--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 cycler==0.10.0
 Django==3.1.7
+django-crispy-forms==1.11.2
+django-filter==2.4.0
 MarkupSafe==1.1.1
 psycopg2==2.8.6
 python-dateutil==2.8.1
