--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-cycler==0.10.0
-Django==3.1.7
+asgiref==3.3.4
+certifi==2020.12.5
+chardet==4.0.0
+Django==3.2
 django-crispy-forms==1.11.2
 django-filter==2.4.0
-MarkupSafe==1.1.1
-psycopg2==2.8.6
-python-dateutil==2.8.1
+idna==2.10
+psycopg2-binary==2.8.6
 python-decouple==3.4
+pytz==2021.1
 regex==2021.4.4
-requests==2.24.0
-urllib3==1.25.10
-virtualenv==20.4.4
-virtualenv-clone==0.5.4
+requests==2.25.1
+sqlparse==0.4.1
