--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ chardet==4.0.0
 Django==3.2
 django-crispy-forms==1.11.2
 django-filter==2.4.0
+django-heroku==0.3.1
+gunicorn==20.1.0
 idna==2.10
 psycopg2-binary==2.8.6
 python-decouple==3.4
